# alphavantage-explorer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  alphavantage.toml.template  clippy.toml  deny.toml  fixtures_generator.py  rustfmt.toml
.githooks/: pre-push
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: api_config.rs  cli_args.rs  config.rs  executor.rs  granular_executor.rs  index_generator.rs  lib.rs  main.rs  progress.rs
crates/cli/tests/: bulk_mode_regression.rs  cli_granular_integration.rs  cli_test.rs  granular_tests.rs
crates/client/: Cargo.toml
crates/client/fixtures/market/: TOP_GAINERS_LOSERS.json
crates/client/fixtures/tickers/AAPL/: BALANCE_SHEET.json  CASH_FLOW.json  DIVIDENDS.json  EARNINGS.json  EARNINGS_CALENDAR.json  EARNINGS_CALL_TRANSCRIPT.json  EARNINGS_ESTIMATES.json  GLOBAL_QUOTE.json  INCOME_STATEMENT.json  INSIDER_TRANSACTIONS.json  NEWS_SENTIMENT.json  OVERVIEW.json  SHARES_OUTSTANDING.json  SPLITS.json  TIME_SERIES_DAILY.json  TIME_SERIES_MONTHLY.json  TIME_SERIES_WEEKLY.json
crates/client/fixtures/tickers/MU/: BALANCE_SHEET.json  CASH_FLOW.json  DIVIDENDS.json  EARNINGS.json  EARNINGS_CALENDAR.json  EARNINGS_CALL_TRANSCRIPT.json  EARNINGS_ESTIMATES.json  GLOBAL_QUOTE.json  INCOME_STATEMENT.json  INSIDER_TRANSACTIONS.json  NEWS_SENTIMENT.json  OVERVIEW.json  SHARES_OUTSTANDING.json  SPLITS.json  TIME_SERIES_DAILY.json  TIME_SERIES_MONTHLY.json  TIME_SERIES_WEEKLY.json
crates/client/fixtures/tickers/NVDA/: BALANCE_SHEET.json  CASH_FLOW.json  DIVIDENDS.json  EARNINGS.json  EARNINGS_CALENDAR.json  EARNINGS_CALL_TRANSCRIPT.json  EARNINGS_ESTIMATES.json  GLOBAL_QUOTE.json  INCOME_STATEMENT.json  INSIDER_TRANSACTIONS.json  NEWS_SENTIMENT.json  OVERVIEW.json  SHARES_OUTSTANDING.json  SPLITS.json  TIME_SERIES_DAILY.json  TIME_SERIES_MONTHLY.json  TIME_SERIES_WEEKLY.json
crates/client/src/: csv_handler.rs  http_client.rs  json_persister.rs  lib.rs  markdown_writer.rs  mock_client.rs  rate_limiter.rs  retry_policy.rs  schema_analyzer.rs
crates/client/tests/: csv_handler_tests.rs  integration_tests.rs  markdown_gen.rs
crates/client/tests/snapshots/: markdown_gen__income_statement_report.snap  markdown_gen__overview_report.snap
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/domain/: api_key.rs  endpoint.rs  market_data.rs  mod.rs  params.rs  schema_table.rs  ticker.rs
crates/core/src/logic/: json_to_table.rs  mod.rs
crates/core/src/ports/: api_client.rs  json_persister.rs  markdown_writer.rs  mod.rs  schema_analyzer.rs
crates/core/src/util/: mod.rs  timestamp.rs
crates/core/tests/: param_validation_tests.rs
docs/: Antigravity-Build-Plan 1.1.md  Antigravity-Build-Plan 1.2.md  Antigravity-Build-Plan 1.3.md  CONFIG_FILE.md  IMPLEMENTATION_SUMMARY_CONFIG.md  LIVE_TEST_NVDA_RESULTS.md  RELEASE_CHECKLIST.md  user-guide.md
docs/architecture/: Architecture-Plan-AlphaVantage-Explorer.md  alpha-vantage-specific-sections-API.md
docs/manual/: commands.md  output-formats.md
docs/prd/: PRD-AlphaVantage-API-Explorer-v0.2.md
examples/: basic-usage.sh  custom-symbols.sh  live-api-usage.sh
tests/integration/: cli_test.rs
validation/: earnings-call-transcript_AAPL_20260111_100314.md  earnings-call-transcript_AAPL_20260111_100658.md  earnings-call-transcript_AAPL_20260111_100715.md  earnings-call-transcript_IBM_20260111_100242.md  income-statement_AAPL_20260111_094919.md  overview_AAPL_20260111_094816.md
validation/raw/: earnings-calendar_IBM_20260111_095146.csv  earnings-call-transcript_AAPL_20260111_100445.json  earnings-call-transcript_AAPL_20260111_100658.json  earnings-call-transcript_AAPL_20260111_100715.json  earnings-call-transcript_IBM_20260111_100242.json  income-statement_AAPL_20260111_094919.json  overview_AAPL_20260111_094816.json
