[package]
name = "alphavantage_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alphavantage_core.workspace = true
alphavantage_client.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
secrecy.workspace = true

[lints]
workspace = true
