[package]
name = "alphavantage_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "alphavantage_cli"
path = "src/lib.rs"

[[bin]]
name = "alphavantage_cli"
path = "src/main.rs"

[dependencies]
alphavantage_core.workspace = true
alphavantage_client.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[lints]
workspace = true
