[package]
name = "alphavantage_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alphavantage_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
secrecy.workspace = true
tokio.workspace = true
async-trait = "0.1"
chrono.workspace = true
anyhow.workspace = true
directories = "5.0" # For finding home directory
rand = "0.8" # For jitter

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full"] }
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3.10"

[lints]
workspace = true
