[package]
name = "alphavantage_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
strum.workspace = true
secrecy.workspace = true
async-trait = "0.1"

[dev-dependencies]
proptest = "1.0"

[lints]
workspace = true
